<resources>
    <string name="app_name">Weather Widget</string>
    <string name="icon_weather_description">Weather characteristic</string>
    <!--<string name="day_of_weak">Monday</string>-->
    <!--<string name="date">1.01.2017</string>-->
    <!--<string name="temperature">+20</string>-->
    <!--<string name="weather_characteristic">Sunny</string>-->

    <string name="day_of_weak">1</string>
    <string name="date">1</string>
    <string name="temperature">1</string>
    <string name="weather_characteristic">1</string>
    <string name="first_tab">Week</string>
    <string name="second_tab">Month</string>

</resources>
